[fix] Adjust the visibility of the color of the run in the table

--- a/aim/web/ui/src/components/CustomTable/Table.scss
+++ b/aim/web/ui/src/components/CustomTable/Table.scss
@@ -290,6 +290,7 @@ $border-radius: 0.2rem;
   text-overflow: ellipsis;
   height: var(--cell-height);
   color: $pico-100;
+  position: relative;
   &.isNumeric {
     justify-content: flex-end;
   }
